@@ -266,6 +266,12 @@ public class Authenticate
             // Keep the user's locale setting if set
             Locale sessionLocale = UIUtil.getSessionLocale(request);
 
+            // Get info about the interrupted request, if set
+            RequestInfo requestInfo = (RequestInfo) session.getAttribute("interrupted.request.info");
+
+            // Get the original URL of interrupted request, if set
+            String requestUrl = (String) session.getAttribute("interrupted.request.url");
+
             // Invalidate session unless dspace.cfg says not to
             if(ConfigurationManager.getBooleanProperty("webui.session.invalidate", true))
             {
@@ -279,6 +285,12 @@ public class Authenticate
             if (sessionLocale != null)
             {
                 Config.set(request.getSession(), Config.FMT_LOCALE, sessionLocale);
+            }
+
+            // Restore interrupted request information and url to new session
+            if (requestInfo != null && requestUrl != null) {
+                session.setAttribute("interrupted.request.info", requestInfo);
+                session.setAttribute("interrupted.request.url", requestUrl);
             }
         }
 
